# vxd

./: AGENTS.md  DOCS2TESTS.md  PROMPT.md
vxd/: Cargo.toml
vxd/src/: abbreviations.rs  autocmd.rs  backup.rs  binary.rs  buffer.rs  cmdline.rs  commands.rs  completion.rs  cursor.rs  cwd.rs  digraphs.rs  filebrowser.rs  fileedit.rs  filefinder.rs  fileformat.rs  folds.rs  global.rs  lib.rs  mappings.rs  marks.rs  modeline.rs  modes.rs  motions.rs  move_text.rs  operators.rs  options.rs  position.rs  recipes.rs  recovery.rs  registers.rs  scroll.rs  search.rs  showmatch.rs  suspend.rs  tabs.rs  textobjects.rs  types.rs  undo.rs  visual.rs  windows.rs
vxd_tui/: Cargo.toml
vxd_tui/src/: buffer.rs  cmdline.rs  cursor.rs  cwd.rs  editor.rs  exit.rs  filebrowser.rs  fileedit.rs  filefinder.rs  input.rs  key.rs  lib.rs  main.rs  marks.rs  modes.rs  registers.rs  suspend.rs
vxd_tui/tests/: abbreviation_spec.rs  buffer_list_spec.rs  buffer_spec.rs  char_find_spec.rs  cmdline_completion_spec.rs  cmdline_spec.rs  copy_across_files_spec.rs  cursor_spec.rs  cwd_spec.rs  exit_spec.rs  filebrowser_spec.rs  fileedit_spec.rs  filefinder_spec.rs  fold_spec.rs  global_spec.rs  jump_spec.rs  macro_spec.rs  mapping_spec.rs  mark_spec.rs  match_bracket_spec.rs  mode_insert_spec.rs  mode_normal_spec.rs  operator_spec.rs  option_spec.rs  put_spec.rs  register_spec.rs  replace_spec.rs  search_spec.rs  suspend_spec.rs  textobject_spec.rs  undo_spec.rs  view_spec.rs  visual_block_spec.rs  visual_spec.rs  window_spec.rs
vxd_tui/tests/common/: mod.rs
